quinto commit con faker en seed.rb

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,7 +6,7 @@
   <br>
 <%= form_with url: tweets_path, method: :get do |form|%>
  <%= form.text_field :query_text, placeholder: "buscador", value: params[:query_text]%>
- <%= form.submit "Buscar", class:"btn btn-primary"%>
+ <%= form.submit "Buscar", class:"btn btn-dark"%>
 <%end%>
 </div>
 
