--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
-    <%= link_to 'Twitter Clone', root_path, class: "navbar-brand"  %>
+    <%= link_to 'Twitter', root_path, class: "navbar-brand"  %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,7 +23,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "Nuevo tweet", new_tweet_path, class: "btn btn-primary" %>
+          <%= link_to "Nuevo tweet", new_tweet_path, class: "btn btn-dark" %>
         </li>
       </ul>
     </div>
